<resources>
    /*Main Activity*/
    <string name="App_Title">Vectores App Demo</string>
    <string name="changeActivityButton">Cambiar a pestaña</string>
    <string name="spinner_Pestañas">Seleccione</string>

    /*Activity Operaciones con 1 vector*/
    <string name="textViewMain">Ingrese el valor de los componentes</string>
    <string name="vector">Vector</string>
    <string name="y">j</string>
    <string name="z">k</string>
    <string name="x">i</string>
    <string name="calcular1">Calcular</string>
    <string name="operacionLabel">Elija la operación a realizar</string>
    <string name="txt_res1">Resultado</string>
    <string name="changeActivity">Ver procedimiento</string>

    /*Activity Operaciones con 2 vectores*/
    <string name="app_name">demo2</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="i">i</string>
    <string name="j2">j2</string>
    <string name="k2">k2</string>
    <string name="i2">i2</string>
    <string name="vector1">Vector A</string>
    <string name="vector2">Vector B</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_la_magnitud_del_vector">Elija la operación a realizar</string>
    <string name="ingrese_el_valor_de_los_componentes">Ingrese el valor de los componentes</string>
    <string name="txt_res">Resultado</string>
    <string name="changeActivity_B">Ver procedimiento</string>
    <string name="radianes">Radianes</string>
    <string name="grados">Grados</string>

    /*Procedures Activity*/
    <string name="return_button">Regresar</string>
    <string name="title_Label">Procedimientos</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>