<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:touchscreenBlocksFocus="false"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/ejeZ2"
        android:layout_width="63dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/k2"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejeZ" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:background="#FFFFFF"
        android:onClick="calcularButton"
        android:rotationY="0"
        android:text="@string/calcular"
        android:textColor="#000000"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_res"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/ejeZ"
        android:layout_width="66dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/k"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView

        android:id="@+id/operationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/calcular_la_magnitud_del_vector"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejeX2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ingrese_el_valor_de_los_componentes"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ejeX2"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/i2"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ejeY2"
        app:layout_constraintTop_toBottomOf="@+id/ejeX" />

    <TextView
        android:id="@+id/vector1_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/vector1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/vector2_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/vector2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ejeX2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vector1_Label" />

    <EditText
        android:id="@+id/ejeY"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/j"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ejeZ"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ejeX"
        android:layout_width="71dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/i"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ejeY"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ejeY2"
        android:layout_width="74dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/j2"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ejeZ2"
        app:layout_constraintTop_toBottomOf="@+id/ejeY" />

    <TextView
        android:id="@+id/txt_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_res"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSpinner" />

    <Spinner
        android:id="@+id/mainSpinner"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@android:string/yes"
        android:touchscreenBlocksFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationLabel" />

    <Button
        android:id="@+id/changeActivity"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:background="#FFFFFF"
        android:onClick="changeActivity"
        android:text="@string/changeActivity_B"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioGroup
        android:id="@+id/radioButtonsContainer"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSpinner">

        <RadioButton
            android:id="@+id/buttonRadianes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/grados" />

        <RadioButton
            android:id="@+id/buttonGrados"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/radianes" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>