<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <Spinner
        android:id="@+id/mainSpinner3"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/bg_spinner"
        android:contentDescription="@android:string/yes"
        android:touchscreenBlocksFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationLabel3" />

    <TextView

        android:id="@+id/operationLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="252dp"
        android:text="@string/operacionLabel"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/changeActivity3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ejeX2" />

    <EditText
        android:id="@+id/ejeX5"
        android:layout_width="71dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="236dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/x"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_res3"
        app:layout_constraintEnd_toStartOf="@+id/ejeY5"
        app:layout_constraintStart_toEndOf="@+id/vector1_Label3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMain"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/changeActivity3"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/ejeZ5"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="220dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/z"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ejeY5"
        android:layout_width="73dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="236dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/y"
        android:inputType="number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_res3"
        app:layout_constraintEnd_toStartOf="@+id/ejeZ5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/vector1_Label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="248dp"
        android:text="@string/vector"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_res3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button5"
        style="@style/Theme.Demo2"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="236dp"
        android:background="#FFFFFF"
        android:onClick="calcularButton"
        android:rotationY="0"
        android:stateListAnimator="@anim/nav_default_pop_enter_anim"
        android:text="@string/calcular1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_res"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/changeActivity3"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="132dp"
        android:background="#FFFFFF"
        android:onClick="changeActivity"
        android:text="@string/changeActivity"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/txt_res3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="236dp"
        android:text="@string/txt_res"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>